2013-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-redirect-send-command-to-process): Use :around
	rather than :override for comint-redirect-filter.
	(comint-redirect-filter): Add the corresponding `orig-filter' argument.
	Call it instead of comint-redirect-original-filter-function (which
	is gone).  Reported by Juanma Barranquero <lekktu@gmail.com>.

2013-05-09  Jan Djärv  <jan.h.d@swipnet.se>

	* frame.el (display-monitor-attributes-list): Add NS case.
	(ns-display-monitor-attributes-list): Declare.

2013-05-09  Ulrich Mueller  <ulm@gentoo.org>

	* descr-text.el (describe-char): Fix %d/%x typo.  (Bug#14360)

2013-05-09  Glenn Morris  <rgm@gnu.org>

	* international/fontset.el (vertical-centering-font-regexp):
	Set standard-value.

	* tar-mode.el (tar-superior-buffer, tar-superior-descriptor): Add doc.

	* bookmark.el (bookmark-search-delay):
	* cus-start.el (vertical-centering-font-regexp):
	* ps-mule.el (ps-mule-font-info-database-default):
	* ps-print.el (ps-default-fg, ps-default-bg):
	* type-break.el (type-break-good-break-interval):
	* whitespace.el (whitespace-indentation-regexp)
	(whitespace-space-after-tab-regexp):
	* emacs-lisp/testcover.el (testcover-1value-functions)
	(testcover-noreturn-functions, testcover-progn-functions)
	(testcover-prog1-functions):
	* emulation/viper-init.el (viper-emacs-state-cursor-color):
	* eshell/em-glob.el (eshell-glob-translate-alist):
	* play/tetris.el (tetris-tty-colors):
	* progmodes/cpp.el (cpp-face-default-list):
	* progmodes/flymake.el (flymake-allowed-file-name-masks):
	* progmodes/idlw-help.el (idlwave-help-browser-generic-program)
	(idlwave-help-browser-generic-args):
	* progmodes/make-mode.el (makefile-special-targets-list):
	* progmodes/python.el (python-shell-virtualenv-path):
	* progmodes/verilog-mode.el (verilog-active-low-regexp)
	(verilog-auto-input-ignore-regexp, verilog-auto-inout-ignore-regexp)
	(verilog-auto-output-ignore-regexp, verilog-auto-tieoff-ignore-regexp)